bugfixed some layouting issues on mobile for the homepage

--- a/css/home.css
+++ b/css/home.css
@@ -89,8 +89,8 @@ body {
 
 .flex-main > .column {
   width: 50%;
-  margin-right: 24px;
   margin-left: 24px;
+  margin-right: 24px;
   display: flex;
   flex-direction: column;
 }
@@ -281,9 +281,13 @@ svg {
     display: none;
   }
 
+  #mainmain > #posts {
+    margin-bottom: 96px;
+  }
+
   .heading-title {
-    padding-top: 24px;
-    padding-left: 24px;
+    padding-top: 12px;
+    padding-left: 0px;
   }
 
   .sidenav {
